Replace broken disclosure policy link with an abtion logo link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang='en-US'>
+<html lang="en-US">
   <head>
     <title>Abtion Secret</title>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -15,7 +15,9 @@
       <%= yield %>
     </main>
     <footer>
-      <a href="https://www.abtion.com/sikkerhedspolitik" target="_blank">Disclosure Policy</a>
+      <a href="https://www.abtion.com" target="_blank">
+        <svg width="30" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 39" fill="none"><path d="M7.78208 38.4012C12.08 38.4012 15.5642 34.9496 15.5642 30.6918C15.5642 26.434 12.08 22.9824 7.78208 22.9824C3.48415 22.9824 0 26.434 0 30.6918C0 34.9496 3.48415 38.4012 7.78208 38.4012Z" fill="currentColor"></path><path d="M48 37.6742H34.7738L16.4353 0H29.6615L48 37.6742Z" fill="currentColor"></path></svg>
+      </a>
     </footer>
   </body>
 </html>
