--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -28,29 +28,42 @@ html {
   color: var(--primary);
   font-size: 16px;
   font-family: "Hansen Grotesque", arial, sans-serif;
+  height: 100%;
 }
 
 body {
   margin: 0;
+  padding: 0;
   height: 100%;
-  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
 }
 
-footer {
-  height: 40px;
+a {
+  color: inherit;
+}
+
+.flex {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 80%;
+}
+
+.justify-end {
+  justify-content: end;
 }
 
 .container {
-  width: 800px;
-  max-width: calc(100% - 20px);
-  margin: 5em auto;
+  flex-grow: 1;
+  width: calc(100% - 20px);
+  max-width: 800px;
+  margin: 0 auto;
+  padding-top: 4em;
 }
 
-.float-right {
-  margin-left: 1em;
-  float: right;
+footer {
+  flex: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 2.5em 0 1.5em;
 }
